Add home page content

--- a/index.html
+++ b/index.html
@@ -2,76 +2,106 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>ACT Campus Resource Finder</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>American College of Technology (ACT)</title>
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
 
     <header>
-        <h1>American College of Technology</h1>
-        <p>ACT Campus Resource Finder</p>
+        <img src="images/act-logo.png" alt="ACT Logo" width="80">
+        <h1>American College of Technology (ACT)</h1>
 
         <nav>
-            <ul>
-                <li><a href="index.html">Home</a></li>
-                <li><a href="resources.html">Resources</a></li>
-                <li><a href="contact.html">Suggest Resource</a></li>
-            </ul>
+            <a href="index.html">Home</a>
+            <a href="about.html">About</a>
+            <a href="programs.html">Programs</a>
+            <a href="academy.html">ACT Academy</a>
+            <a href="resources.html">Why ACT</a>
+            <a href="contact.html">Contact</a>
         </nav>
     </header>
 
-    <main>
+    <hr>
 
-        <section>
-            <h2>About ACT</h2>
-            <p>
-                American College of Technology (ACT) provides undergraduate, postgraduate,
-                and online learning programs designed to prepare students for industry and
-                professional careers.
-            </p>
-        </section>
+    <section>
+        <h2>Welcome to American College of Technology</h2>
+        <p>
+            American College of Technology (ACT) is a higher learning institution
+            dedicated to developing globally competitive professionals in
+            Business Administration and Computer Science.
+        </p>
 
-        <section>
-            <h2>Academic Programs</h2>
+        <p>
+            ACT offers flexible learning through on-campus and online programs,
+            making education accessible for busy students and working professionals.
+        </p>
+    </section>
 
-            <article>
-                <h3>Undergraduate Programs</h3>
-                <ul>
-                    <li>BSc in Computer Science</li>
-                    <li>BA in Business Administration</li>
-                </ul>
-            </article>
+    <hr>
 
-            <article>
-                <h3>Postgraduate Programs</h3>
-                <ul>
-                    <li>MSc in Computer Science</li>
-                    <li>MBA (Master of Business Administration)</li>
-                </ul>
-            </article>
-        </section>
+    <section>
+        <h2>Why Choose ACT?</h2>
+        <ul>
+            <li>Fully accredited by the Ethiopian Higher Education Agency</li>
+            <li>Flexible evening, weekend, and online classes</li>
+            <li>Globally competitive curriculum</li>
+            <li>Exclusive Coursera partnership in Ethiopia</li>
+            <li>Affordable and industry-focused programs</li>
+        </ul>
+    </section>
 
-        <section>
-            <h2>Online Learning</h2>
-            <p>
-                ACT Academy is an online learning platform where students can access courses
-                in programming, business, design, and more at their own pace.
-            </p>
-        </section>
+    <hr>
+    <section>
+        <h2>Our Programs</h2>
 
-        <section>
-            <h2>Student Communities</h2>
-            <p>
-                ACT supports student clubs and communities such as the ACT DEV Community,
-                where students collaborate, learn, and grow their technical skills.
-            </p>
-        </section>
+        <h3>Undergraduate Programs</h3>
+        <ul>
+            <li>BSc in Computer Science</li>
+            <li>BA in Business Administration</li>
+        </ul>
 
-    </main>
+        <h3>Postgraduate & Online Programs</h3>
+        <ul>
+            <li>MSc in Computer Science</li>
+            <li>MBA (On-campus & Online)</li>
+            <li>MA in Project Management</li>
+        </ul>
+    </section>
 
+    <hr>
+    <section>
+        <h2>ACT Academy</h2>
+        <img src="images/act-academy-logo.png" alt="ACT Academy Logo" width="120">
+
+        <p>
+            ACT Academy is an online learning platform that offers flexible,
+            professional training programs in Digital Marketing, Data Science,
+            Programming, and more.
+        </p>
+
+        <p>
+            Learners can study at their own pace and access both free and paid
+            courses anytime, anywhere.
+        </p>
+    </section>
+
+    <hr>
+    <section>
+        <h2>ACT DEV Community</h2>
+        <img src="images/act-dev-logo.png" alt="ACT DEV Community Logo" width="120">
+
+        <p>
+            The ACT DEV Community is a student-led technology club that brings
+            together developers and tech enthusiasts to collaborate, learn,
+            and improve their practical skills.
+        </p>
+    </section>
+
+    <hr>
     <footer>
-        <p>&copy; 2026 American College of Technology</p>
+        <p>📍 Addis Ababa, 4 Killo, ACT Building</p>
+        <p>📞 +251 955 040 404 | +251 944 150 000</p>
+        <p>© 2026 American College of Technology</p>
     </footer>
 
 </body>
