Update home page content

--- a/contact.html
+++ b/contact.html
@@ -70,6 +70,7 @@
     <footer>
         <p>&copy; 2026 American College of Technology</p>
     </footer>
+    <script src="script.js"></script>
 
 </body>
 </html>
