--- a/resources.html
+++ b/resources.html
@@ -40,33 +40,8 @@
             <button>Clubs</button>
         </section>
 
-        <section>
+        <section id="resourceList">
             <h2>Resource List</h2>
-
-            <article>
-                <h3>BSc in Computer Science</h3>
-                <p>Category: Undergraduate</p>
-                <p>Undergraduate program focused on computer science fundamentals.</p>
-            </article>
-
-            <article>
-                <h3>MSc in Computer Science</h3>
-                <p>Category: Postgraduate</p>
-                <p>Advanced computer science program for postgraduate students.</p>
-            </article>
-
-            <article>
-                <h3>ACT Academy</h3>
-                <p>Category: Online</p>
-                <p>Online learning platform offering flexible courses.</p>
-            </article>
-
-            <article>
-                <h3>ACT DEV Community</h3>
-                <p>Category: Club</p>
-                <p>Student community focused on software development and collaboration.</p>
-            </article>
-
         </section>
 
     </main>
@@ -74,6 +49,7 @@
     <footer>
         <p>&copy; 2026 American College of Technology</p>
     </footer>
+    <script src="script.js"></script>
 
 </body>
 </html>
