Add ACT Academy page

--- a/programs.html
+++ b/programs.html
@@ -64,7 +64,7 @@
         <ul>
             <li>Cybersecurity</li>
             <li>Digital Marketing</li>
-            <li>Data Science with Python / R</li>
+            <li>Data Science with Python</li>
             <li>Python Programming</li>
             <li>Import and Export Training</li>
         </ul>
