update Why ACT page

--- a/resources.html
+++ b/resources.html
@@ -2,54 +2,96 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>ACT Resources</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Why Choose ACT</title>
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-
     <header>
-        <h1>ACT Campus Resources</h1>
+        <img src="images/act-logo.png" alt="ACT Logo" width="80">
+        <h1>Why Choose American College of Technology</h1>
 
         <nav>
-            <ul>
-                <li><a href="index.html">Home</a></li>
-                <li><a href="resources.html">Resources</a></li>
-                <li><a href="contact.html">Suggest Resource</a></li>
-            </ul>
+            <a href="index.html">Home</a>
+            <a href="about.html">About</a>
+            <a href="programs.html">Programs</a>
+            <a href="academy.html">ACT Academy</a>
+            <a href="resources.html">Why ACT</a>
+            <a href="contact.html">Contact</a>
         </nav>
     </header>
 
-    <main>
+    <hr>
+    <section>
+        <h2>What Sets ACT Apart?</h2>
+        <p>
+            American College of Technology (ACT) is committed to delivering
+            high-quality education that prepares students for real-world
+            professional success.
+        </p>
+    </section>
 
-        <section>
-            <h2>Available Resources</h2>
-            <p>
-                Browse academic programs, online learning platforms, and student communities
-                available at American College of Technology.
-            </p>
-        </section>
+    <hr>
+    <section>
+        <h2>Our Key Strengths</h2>
+        <ul>
+            <li>Only licensed institution in Ethiopia offering Coursera programs</li>
+            <li>Flexible evening, weekend, and online learning options</li>
+            <li>Globally competitive curriculum</li>
+            <li>Experienced local and international instructors</li>
+            <li>Modern and paperless learning environment</li>
+        </ul>
+    </section>
 
-        <section>
-            <h2>Filter by Category</h2>
+    <hr>
+    <section>
+        <h2>Global Partnerships</h2>
+        <p>
+            ACT maintains strong partnerships with international institutions
+            and global platforms to enhance learning opportunities.
+        </p>
 
-            <button>All</button>
-            <button>Undergraduate</button>
-            <button>Postgraduate</button>
-            <button>Online</button>
-            <button>Clubs</button>
-        </section>
+        <ul>
+            <li>Coursera</li>
+            <li>CISCO</li>
+            <li>Huawei</li>
+            <li>Oracle</li>
+            <li>Microsoft</li>
+        </ul>
+    </section>
 
-        <section id="resourceList">
-            <h2>Resource List</h2>
-        </section>
+    <hr>
+    <section>
+        <h2>Student Support & Career Development</h2>
+        <ul>
+            <li>Free soft skills training</li>
+            <li>Career development support</li>
+            <li>Free NGAT test preparation</li>
+            <li>Supportive academic environment</li>
+        </ul>
+    </section>
 
-    </main>
+    <hr>
+    <section>
+        <h2>Modern Campus & Learning Facilities</h2>
+        <p>
+            Located in Addis Ababa, 4 Killo, ACT provides students with
+            a modern campus that includes:
+        </p>
 
+        <ul>
+            <li>High-speed internet access</li>
+            <li>Digital library</li>
+            <li>Computer labs</li>
+            <li>Comfortable classrooms</li>
+        </ul>
+    </section>
+
+    <hr>
     <footer>
-        <p>&copy; 2026 American College of Technology</p>
+        <p>📍 Addis Ababa, 4 Killo, ACT Building</p>
+        <p>📞 +251 955 040 404 | +251 944 150 000</p>
+        <p>© 2026 American College of Technology</p>
     </footer>
-    <script src="script.js"></script>
 
 </body>
 </html>
