update contact page

--- a/contact.html
+++ b/contact.html
@@ -2,75 +2,53 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Suggest a Resource</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Contact Us - ACT</title>
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-
     <header>
-        <h1>Suggest a New Resource</h1>
+        <img src="images/act-logo.png" alt="ACT Logo" width="80">
+        <h1>Contact American College of Technology</h1>
 
         <nav>
-            <ul>
-                <li><a href="index.html">Home</a></li>
-                <li><a href="resources.html">Resources</a></li>
-                <li><a href="contact.html">Suggest Resource</a></li>
-            </ul>
+            <a href="index.html">Home</a>
+            <a href="about.html">About</a>
+            <a href="programs.html">Programs</a>
+            <a href="academy.html">ACT Academy</a>
+            <a href="resources.html">Why ACT</a>
+            <a href="contact.html">Contact</a>
         </nav>
     </header>
 
-    <main>
+    <hr>
+    <section>
+        <h2>General Contact Information</h2>
+        <p>📍 Location: Addis Ababa, 4 Killo, ACT Building</p>
+        <p>📞 Phone: +251 955 040 404 | +251 944 150 000</p>
+        <p>🌐 Website: www.act.edu.et</p>
+        <p>📲 Telegram: @act_official_channel</p>
+    </section>
 
-        <section>
-            <h2>Resource Suggestion Form</h2>
-            <p>
-                Use the form below to suggest a new academic program, online platform,
-                or student community at American College of Technology.
-            </p>
-        </section>
+    <hr>
+    <section>
+        <h2>Offices & Departments</h2>
 
-        <section>
-            <form>
+        <ul>
+            <li><strong>Registrar Office:</strong> +251 118 124 488 | +251 994 030 303</li>
+            <li><strong>Computer Science Department Head:</strong> Mrs. Sofanit – +251 956 445 635</li>
+            <li><strong>Business Administration Department Head:</strong> Mr. Hailemariam – +251 954 410 977</li>
+            <li><strong>Online Project Management Department Head:</strong> Mr. Yaregal Tilahun – +251 963 001 949</li>
+            <li><strong>Finance Office:</strong> Mrs. Tigist – +251 954 410 840</li>
+            <li><strong>School Dean:</strong> Mrs. Sitina Akmel – +251 963 001 942</li>
+            <li><strong>Online MBA & Leadership Head:</strong> Ms. Bethlehem Getachew – +251 963 001 947</li>
+            <li><strong>MIU Coordinator:</strong> Mr. Asmare – +251 911 862 300</li>
+        </ul>
+    </section>
 
-                <div>
-                    <label for="resourceName">Resource Name:</label><br>
-                    <input type="text" id="resourceName" name="resourceName" required>
-                </div>
-
-                <br>
-
-                <div>
-                    <label for="category">Category:</label><br>
-                    <select id="category" name="category" required>
-                        <option value="">-- Select Category --</option>
-                        <option value="Undergraduate">Undergraduate</option>
-                        <option value="Postgraduate">Postgraduate</option>
-                        <option value="Online">Online</option>
-                        <option value="Club">Club</option>
-                    </select>
-                </div>
-
-                <br>
-
-                <div>
-                    <label for="description">Description:</label><br>
-                    <textarea id="description" name="description" rows="4" required></textarea>
-                </div>
-
-                <br>
-
-                <button type="submit">Submit Resource</button>
-
-            </form>
-        </section>
-
-    </main>
-
+    <hr>
     <footer>
-        <p>&copy; 2026 American College of Technology</p>
+        <p>© 2026 American College of Technology</p>
     </footer>
-    <script src="script.js"></script>
 
 </body>
 </html>
