Add project README

--- a/academy.html
+++ b/academy.html
@@ -73,6 +73,7 @@
         <p>📞 +251 955 040 404 | +251 944 150 000</p>
         <p>© 2026 American College of Technology</p>
     </footer>
+    <script src="js/script.js"></script>
 
 </body>
 </html>
