--- a/resources.html
+++ b/resources.html
@@ -25,7 +25,7 @@
     </header>
 
     <main>
-        <section class="intro-benefits">
+        <section  class="hero-section">
             <h2>Your Success is Our Priority</h2>
             <p>At ACT, we provide more than just education. We offer a complete learning ecosystem designed to help you achieve your academic and career goals.</p>
         </section>
@@ -98,12 +98,7 @@
                     <h3>📶 High-Speed WiFi</h3>
                     <p>Campus-wide internet access for all students</p>
                 </div>
-                
-                <div class="facility">
-                    <h3>☕ Student Lounge</h3>
-                    <p>Comfortable spaces for studying and socializing</p>
-                </div>
-                
+
                 <div class="facility">
                     <h3>🎤 Presentation Rooms</h3>
                     <p>Equipped with projectors and audio systems</p>
