--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <header>
         <div class="header-content">
-            <img src="images/act-logo.png" alt="ACT Logo" class="logo">
+            <img src="images/act-logo.png" alt="ACT Logo" width="80">
             <h1>American College of Technology</h1>
         </div>
         
