--- a/academy.html
+++ b/academy.html
@@ -25,7 +25,7 @@
     </header>
 
     <main>
-        <section class="academy-intro">
+        <section class="important-section">
             <h2>What is ACT Academy?</h2>
             <p>ACT Academy is our professional training division offering short-term, practical courses for skill development and career advancement.</p>
             <p><strong>Different from our degree programs:</strong> Academy courses are shorter (1-3 months), focused on specific skills, and designed for working professionals and students seeking additional qualifications.</p>
